--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
