--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.17.1",
+    "@mantine/dates": "^7.17.1",
     "@mantine/dropzone": "^7.17.1",
     "@mantine/form": "^7.17.1",
     "@mantine/hooks": "^7.17.1",
