feat(app): inqueries-table

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "mantine-datatable": "^7.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
