--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.67.1",
     "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
